2007-06-25  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy.mdp: Added SyncManager.cs, SyncDialog.cs,
	  FileSystemSyncServer.cs, TomboySyncClient.cs
	* Tomboy/PreferencesDialog.cs, Tomboy/SyncDialog.cs,
	  Tomboy/SyncManager.cs, Tomboy/Preferences.cs, Tomboy/Makefile.am,
	  Tomboy/TomboySyncClient.cs: Initial sync code from Sandy Armstrong.
	* Tomboy/FileSystemSyncServer.cs: Initial sync code from Sandy
	  Armstrong.  Deal with lock file expiration also.
	* Tomboy/NoteWindow.cs: Initial sync code from Sandy Armstrong.  Add a
	  temporary "Synchronize Notes" menu item to the Tools menu.
	* Tomboy/Note.cs: Initial sync code from Sandy Armstrong.  Add revision
	  support.

2007-06-22  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Plugins/ExportToHTML.xsl: Change HTML export link/title colors
	  to match new note link/title colors.  Fixes bug #449597 (patch
	  courtesy of Stefan Schweizer).

2007-06-22  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/RecentChanges.cs: Removing unused Gtk.HPaned.

2007-06-17  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Addins/*, Tomboy/Mono.Addins/*: svn:ignore love.

2007-06-11  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Addins/Tasks/TaskListWindow.cs: Set the minimum width to 200
	  pixels and ellipsize the task summary.

2007-06-08  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Addins/Tasks/TasksNoteAddin.cs: Added code to watch when a
	  newline is pressed so that a task/todo list can be continued or
	  ended depending on the previous line.
	* Tomboy/Addins/Tasks/TaskManager.cs: Commented-out code that throws an
	  exception when a task with the same name/summary is created (allow
	  duplicate tasks).

2007-06-07  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Addins/Tasks/TasksNoteAddin.cs: Delete the task when the user
	  uses the backspace key to remove an entire todo line character by
	  character.  Not working yet to highlight a bunch of lines and
	  remove multiple todo items.
